--- a/src/app/Components/case/case-details/case-details.component.html
+++ b/src/app/Components/case/case-details/case-details.component.html
@@ -303,7 +303,7 @@
             <label for="documentContent" class="form-label">Content</label>
             <textarea class="form-control" id="documentContent" [(ngModel)]="newDocument.content" name="content" required></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Add Document</button>
+          <button type="submit" class="btn btn-primary" style="background-color:blue">Add Document</button>
         </form>
       </div>
       <!-- Modal Footer -->
