--- a/src/app/Law/zoyothemes.com/palexi/index-1.html
+++ b/src/app/Law/zoyothemes.com/palexi/index-1.html
@@ -13,7 +13,6 @@
 
     <link rel="shortcut icon" href="images/favicon-img.ico">
 
-    <title>Palexi | Responsive Bootstrap Business Page Template</title>
 
 
 
@@ -28,7 +27,7 @@
             <!-- Logo container-->
             <div>
                 <a class='logo text-uppercase' href='index.html'>
-            Lawyer
+            LawyerSoft
           </a>
             </div>
             <!-- End Logo container-->
