--- a/src/app/loginPage/brandio.io/envato/iofrm/html/login1.html
+++ b/src/app/loginPage/brandio.io/envato/iofrm/html/login1.html
@@ -47,6 +47,8 @@
                           </div>
                             <div class="form-button">
                                 <button id="submit" type="submit" class="ibtn" [disabled]="loginForm.invalid">Login</button> <a href="/forgotPassword">Forget password?</a>
+                           <br>    <a href="/register">Create Account</a>
+
                             </div>
                         </form>
                         <div class="other-links">
