--- a/src/app/Components/Lawyer/lawyer-clients/lawyer-clients.component.html
+++ b/src/app/Components/Lawyer/lawyer-clients/lawyer-clients.component.html
@@ -125,11 +125,15 @@
 
 
 
-<div class="sidebar px-4 py-4 py-md-5 me-0">
+<div class="sidebar px-4 py-4 py-md-5 me-0"
+
+
+
+>
   <div class="d-flex flex-column h-100">
     <a class="mb-0 brand-icon">
-    <span class="logo-icon">
-    <img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px; " />
+<span class="logo-icon">
+<img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px; " />
 
 </span>
 
