--- a/src/app/Components/Lawyer/lawyer-view/lawyer-view.component.html
+++ b/src/app/Components/Lawyer/lawyer-view/lawyer-view.component.html
@@ -200,10 +200,13 @@
         </a>
       </li>
     </ul>
-    <button class="btn btn-danger" (click)="onLogout()">Logout
-      <span class="ms-2"> <mat-icon>exit_to_app</mat-icon>
-</span>
+    <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
+      Logout
+      <span class="ms-2">
+    <mat-icon style="vertical-align: middle;">exit_to_app</mat-icon>
+  </span>
     </button>
+
   </div>
 </div>
 
