--- a/src/app/Components/Client/client-case/client-case.component.html
+++ b/src/app/Components/Client/client-case/client-case.component.html
@@ -6,78 +6,23 @@
   <title>Lawyer Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="../../Lawyer/lawyer-view/css/bootstrap-icons.css">
+  <link rel="stylesheet" href="../../Lawyer/lawyer-view/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../Lawyer/lawyer-view/css/apexcharts.css">
+  <link rel="stylesheet" href="../../Lawyer/lawyer-view/css/bootstrap-icons.css">
+  <link rel="stylesheet" href="../../Lawyer/lawyer-view/css/tooplate-mini-finance.css">
+  <link rel="stylesheet" href="../../Lawyer/lawyer-clients/css/tooplate-gotto-job.css">
 </head>
 <body>
-<header style="background-color: #4c3575;" class="header fixed top-0 z-10 left-0 right-0 flex items-stretch shrink-0 bg-[--tw-page-bg] dark:bg-[--tw-page-bg-dark]" data-sticky="true" data-sticky-class="shadow-sm" data-sticky-name="header" id="header">
-  <!-- Container -->
-  <div class="container-fixed flex justify-between items-stretch lg:gap-4" id="header_container"style="border: none; /* Remove any border */
-  outline: none;margin-right: -10px /* Remove any outline */">
-    <!-- Mobile Logo -->
-    <div class="flex gap-1 lg:hidden items-center -ml-1"  style="margin-left: 200px">
-      <a class="shrink-0" href="https://keenthemes.com/metronic/tailwind/demo1/" >
-        <img class="max-h-[25px] w-full" [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'"/>
-      </a>
-      <div class="flex items-center">
-        <button class="btn btn-icon btn-light btn-clear btn-sm" data-drawer-toggle="#sidebar">
-          <i class="ki-filled ki-menu">
-          </i>
-        </button>
-      </div>
-    </div>
-    <!-- End of Mobile Logo -->
-    <!-- Breadcrumbs -->
-    <div class="flex [.header_&amp;]:below-lg:hidden items-center gap-1.25 text-xs lg:text-sm font-medium mb-2.5 lg:mb-0" data-reparent="true" data-reparent-mode="prepend|lg:prepend" data-reparent-target="#content_container|lg:#header_container" >
-       <span class="text-gray-700">
-
-       </span>
-
-      <span class="text-gray-700">
-       </span>
-    </div>
-    <!-- End of Breadcrumbs -->
-    <div *ngIf="alertVisible" [ngClass]="{'alert-success': alertType === 'success', 'alert-danger': alertType === 'error'}" class="alert" role="alert">
-      {{ alertMessage }}
-    </div>
-
-    <!-- Topbar -->
-    <div class="flex items-center gap-2 lg:gap-3.5" >
+<div class="sidebar px-4 py-4 py-md-5 me-0"
 
 
 
-
-
-
-      <!-- Profile Dropdown -->
-      <div class="relative" (click)="toggleDropdown()">
-        <div class="cursor-pointer">
-          <img alt="Profile" class=" rounded-full border-2 border-success shrink-0" style="width: 70px;  /* Adjust to your desired size */
-  height: 70px; /* Adjust to your desired size */"
-               [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'">
-        </div>
-
-        <!-- Dropdown Menu -->
-        <div *ngIf="isDropdownOpen" class="absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md z-10">
-          <div class="px-4 py-3">
-            <p class="text-sm font-semibold">{{client?.firstName}} {{client?.familyName}}</p>
-            <p class="text-xs text-gray-600">{{client?.email}}</p>
-          </div>
-          <div class="border-t border-gray-200"></div>
-          <a [routerLink]="['/client', clientId]" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a>
-          <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Settings</a>
-          <a (click)="onLogout()" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Logout</a>
-        </div>
-      </div>
-    </div>
-    <!-- End of Topbar -->
-  </div>
-  <!-- End of Container -->
-</header>
-
-<div class="sidebar px-4 py-4 py-md-5 me-0">
+>
   <div class="d-flex flex-column h-100">
     <a class="mb-0 brand-icon">
-    <span class="logo-icon">
-    <img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px;" />
+<span class="logo-icon">
+<img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px; " />
 
 </span>
 
@@ -86,7 +31,7 @@
     <ul class="menu-list flex-grow-1 mt-3">
       <li>
         <a class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" [routerLink]="['/client', clientId]">
-          <i class="icofont-home fs-5"></i> <mat-icon>home</mat-icon><span>profile</span>
+          <i class="icofont-home fs-5"></i> <mat-icon>home</mat-icon><span>Dashboard</span>
           <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
         </a>
 
@@ -94,7 +39,7 @@
 
 
       <li>
-        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/client', clientId, 'case']">
+        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/client', caseId, 'case']">
           <i class="icofont-ticket"></i><mat-icon>gavel</mat-icon> <span>Cases</span>
           <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
         </a>
@@ -106,67 +51,197 @@
           <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
         </a>
       </li>
+
     </ul>
-    <button class="btn btn-danger" (click)="onLogout()">Logout
-      <span class="ms-2"> <mat-icon>exit_to_app</mat-icon>
-</span>
+    <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
+      Logout
+      <span class="ms-2">
+    <mat-icon style="vertical-align: middle;">exit_to_app</mat-icon>
+  </span>
     </button>
+
   </div>
 </div>
 
-<div class="main px-lg-4 px-md-4">
+<header class="navbar sticky-top flex-md-nowrap">
+  <div class="col-md-3 col-lg-3 me-0 px-3 fs-6">
+  </div>
+
+  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="navbar-nav me-lg-2">
+    <div class="nav-item text-nowrap d-flex align-items-center">
+      <div class="dropdown ps-3 position-relative">
+        <a class="nav-link dropdown-toggle text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="navbarLightDropdownMenuLink">
+          <i class="bi-bell"></i>
+          <span class="position-absolute start-100 translate-middle p-1 bg-danger border border-light rounded-circle">
+            <span class="visually-hidden">New alerts</span>
+          </span>
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink" style="max-width: 300px; width: auto; padding: 10px 0; overflow-x: hidden;">
+          <small>Notifications</small>
+
+
+
+        </ul>
+      </div>
+
+      <div class="dropdown px-3 position-relative">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image" alt="" style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-end bg-white shadow" style="max-width: 250px; width: auto; padding: 10px 0; overflow-x: hidden;">
+          <li>
+            <div class="dropdown-menu-profile-thumb d-flex" style="padding: 8px;">
+              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="" style="width: 40px; height: 40px; object-fit: cover;">
+              <div class="d-flex flex-column">
+                <small>{{ client?.firstName }}</small>
+                <a href="#">{{client?.email}}</a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <a class="dropdown-item" [routerLink]="['/client', clientId]">
+              <i class="bi-person me-2"></i>
+              Profile
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="setting.html">
+              <i class="bi-gear me-2"></i>
+              Settings
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="help-center.html">
+              <i class="bi-question-circle me-2"></i>
+              Help
+            </a>
+          </li>
+
+          <li class="border-top mt-3 pt-2 mx-4">
+            <a class="dropdown-item ms-0 me-0" (click)="onLogout()">
+              <i class="bi-box-arrow-left me-2"></i>
+              Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="main px-lg-4 px-md-5" style=" margin-top: 100px">
+
+  <section class="job-section job-featured-section section-padding" id="job-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-12 text-center mx-auto mb-4">
+          <div class="row align-items-center mb-4">
+            <div class="card-header p-0 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
+
+            </div>
+          </div>
+          <h2 style="font-size: 40px;">Featured Cases</h2>
+          <p style="color:#7e8182;font-size:20px;">Browse through your cases . You can view your case details</p>
+        </div>
+
+        <div class="col-lg-12 col-12" *ngFor="let c of cases">
+          <div class="job-thumb d-flex">
+            <div class="job-image-wrap bg-white shadow-lg">
+              <img src="./assets/court.png" class="job-image img-fluid" alt="">
+            </div>
+
+            <div class="job-body d-flex flex-wrap flex-auto align-items-center ms-4">
+              <div class="mb-3">
+                <h4 class="job-title mb-lg-0">
+                  <a [routerLink]="['/client', clientId, 'case', c.caseId]" class="job-title-link">{{ c.caseType }}</a>
+                </h4>
+
+                <div class="d-flex flex-wrap align-items-center">
+                  <p class="job-location mb-0">
+                    <mat-icon>person</mat-icon>
+                    {{ c.client?.firstName }} {{ c.client?.familyName }}
+                  </p>
+
+                  <p class="job-date mb-0">
+                    <mat-icon>calendar_today</mat-icon>
+                    {{ c.start }}
+                  </p>
+
+                  <p class="job-price mb-0">
+                    <mat-icon>attach_money</mat-icon>
+                    {{ c.invoice?.price }}
+                  </p>
+
+                  <div class="d-flex" style="margin-left:-60px;">
+                    <p class="mb-0">
+                      <a [routerLink]="['/client', clientId, 'case', c.caseId]" class="badge badge-level">View Case</a>
+                    </p>
+
+                  </div>
+
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Pagination (Moved outside the *ngFor) -->
+
+      </div>
+    </div>
+  </section>
+
+
+
+
   <div class="body d-flex py-lg-3 py-md-2">
     <div class="container-xxl">
       <!-- Add Case Button -->
 
       <!-- The Modal -->
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" [ngClass]="{'show': isModalOpen}" [ngStyle]="{'display': isModalOpen ? 'block' : 'none'}">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title" id="exampleModalLabel">{{ caseId ? 'Edit Case' : 'Add Case' }}</h4>
+              <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close"></button>
+            </div>
+            <!-- Modal Body -->
+            <div class="modal-body">
+            </div>
 
+            <!-- Modal Footer -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Assign Client Modal -->
+      <!-- The Modal for Assigning Client -->
       <!-- Assign Client Modal -->
       <!-- The Modal for Assigning Client -->
 
       <!-- Cases Section -->
-      <div class="container" style="padding-top:100px">
-        <div class="case-card card mb-3" *ngFor="let c of cases">
-          <div class="card-header" style="background-color: #4c3575; color: white ">
-            <mat-icon>gavel</mat-icon>
-            <h2 class="d-inline ms-2">{{ c.caseStatus }}</h2>
-          </div>
-          <div class="card-body">
-            <div class="d-flex flex-column">
-              <div class="mb-2">
-                <mat-icon>badge</mat-icon>
-                <span class="ms-2">{{ c.caseType }}</span>
-              </div>
-              <div class="mb-2">
-                <mat-icon>calendar_today</mat-icon>
-                <span class="ms-2">{{ c.start }}</span>
-              </div>
-              <div class="mb-2" *ngFor="let l of lawyers">
-                <mat-icon>person</mat-icon>
-                <span class="ms-2">{{ l.firstName }} {{ l.familyName }}</span>
-              </div>
-              <div class="mb-2">
-                <mat-icon>description</mat-icon>
-                <span class="ms-2">{{ c?.description }}</span>
-              </div>
-              <div class="mb-2">
-                <mat-icon>attach_money</mat-icon>
-                <span class="ms-2">{{ c?.invoice?.price }}</span>
-              </div>
-
-            </div>
-          </div>
-          <div class="card-footer d-flex justify-content-between" style="background-color: #4c3575; color: white ">
-
-            <button class="btn btn-primary" [routerLink]="['/client', clientId, 'case', c.caseId]" style="background-color: #0a58ca">View Case</button>
-
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
-<!-- Invoice Modal -->
+
 
 
 
