--- a/src/app/Components/Lawyer/assistant/assistant.component.html
+++ b/src/app/Components/Lawyer/assistant/assistant.component.html
@@ -6,113 +6,130 @@
   <title>Lawyer Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/icofont/1.0.0/css/icofont.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;700&display=swap" rel="stylesheet">
+
+
+  <link href="../lawyer-view/css/bootstrap-icons.css" rel="stylesheet">
+
+  <link href="../lawyer-view/css/apexcharts.css" rel="stylesheet">
+
+  <link href="../lawyer-view/css/tooplate-mini-finance.css" rel="stylesheet">
 </head>
 <body>
-<header style="background-color: #4c3575;" class="header fixed top-0 z-10 left-0 right-0 flex items-stretch shrink-0 bg-[--tw-page-bg] dark:bg-[--tw-page-bg-dark]" data-sticky="true" data-sticky-class="shadow-sm" data-sticky-name="header" id="header">
-  <!-- Container -->
-  <div class="container-fixed flex justify-between items-stretch lg:gap-4" id="header_container"style="border: none; /* Remove any border */
-  outline: none;margin-right: -10px /* Remove any outline */">
-    <!-- Mobile Logo -->
-    <div class="flex gap-1 lg:hidden items-center -ml-1"  style="margin-left: 200px">
-      <a class="shrink-0" href="https://keenthemes.com/metronic/tailwind/demo1/" >
-        <img class="max-h-[25px] w-full" [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'"/>
-      </a>
-      <div class="flex items-center">
-        <button class="btn btn-icon btn-light btn-clear btn-sm" data-drawer-toggle="#sidebar">
-          <i class="ki-filled ki-menu">
-          </i>
-        </button>
-      </div>
-    </div>
-    <!-- End of Mobile Logo -->
-    <!-- Breadcrumbs -->
-    <div class="flex [.header_&amp;]:below-lg:hidden items-center gap-1.25 text-xs lg:text-sm font-medium mb-2.5 lg:mb-0" data-reparent="true" data-reparent-mode="prepend|lg:prepend" data-reparent-target="#content_container|lg:#header_container" >
-       <span class="text-gray-700">
+<header class="navbar sticky-top flex-md-nowrap">
+  <div class="col-md-3 col-lg-3 me-0 px-3 fs-6">
 
-       </span>
+  </div>
 
-      <span class="text-gray-700">
-       </span>
-    </div>
-    <!-- End of Breadcrumbs -->
-    <div *ngIf="alertVisible" [ngClass]="{'alert-success': alertType === 'success', 'alert-danger': alertType === 'error'}" class="alert" role="alert">
-      {{ alertMessage }}
-    </div>
+  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <!-- Topbar -->
-    <div class="flex items-center gap-2 lg:gap-3.5" >
-      <!-- Notification Button -->
-      <div class="relative">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="notificationsDropdown"
-          role="button"
-          (click)="markNotificationsAsViewed()"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <i class="ki-filled ki-notification-on"></i>
 
-          <!-- Removed the "Notifications" text -->
+
+  <div class="navbar-nav me-lg-2">
+    <div class="nav-item text-nowrap d-flex align-items-center">
+      <div class="dropdown ps-3">
+        <a class="nav-link dropdown-toggle text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="navbarLightDropdownMenuLink">
+          <i class="bi-bell"></i>
+          <span class="position-absolute start-100 translate-middle p-1 bg-danger border border-light rounded-circle">
+                                <span class="visually-hidden">New alerts</span>
+                            </span>
         </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
-          <!-- Check if there are no notifications -->
-          <li *ngIf="notifications.length === 0" class="dropdown-item text-center">
-            No new notifications
-          </li>
 
-          <!-- Iterate through notifications if available -->
-          <li *ngFor="let notification of notifications" class="notification-item">
-            <a class="dropdown-item" href="#">
-              <div class="notification-content">
-                <strong>{{ notification.client.firstName }} {{ notification.client.familyName }}</strong>
-                <p class="notification-details">
-                  Title: {{ notification.title }}<br />
-                  Day: {{ notification.start | date: 'fullDate' }}<br />
-                  Time: {{ notification.start | date: 'shortTime' }}
-                  <span class="notification-time">{{ getTimeAgo(notification.start) }}</span>
-                </p>
-                <span class="notification-time">{{ notification.time }}</span>
+        <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink">
+          <small>Notifications</small>
+
+          <li *ngFor="let notification of notifications" class="notifications-block border-bottom pb-2 mb-2">
+            <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
+              <div class="notifications-icon-wrap bg-warning">
+                <i class="notifications-icon bi-envelope-fill"></i>
+              </div>
+
+              <div class="ms-2">
+                <span class="fw-bold">{{ notification.title }}</span>
+                <div class="text-muted">
+                  {{ notification.client.firstName }} {{ notification.client.familyName }}
+                  <br>
+                  {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}
+                </div>
+                <div class="mt-2">
+                  <!-- Show Accept and Decline buttons only if the request is PENDING -->
+                  <ng-container *ngIf="notification.status === 'PENDING'">
+                    <button class="btn btn-success btn-sm me-2" (click)="acceptRequest(notification.id)">Accept</button>
+                    <button class="btn btn-danger btn-sm" (click)="declineRequest(notification.id)">Decline</button>
+                  </ng-container>
+
+                  <!-- Show Accepted or Rejected status -->
+                  <ng-container *ngIf="notification.status === 'ACCEPTED'">
+                    <span class="text-success">Accepted</span>
+                  </ng-container>
+
+                  <!-- Show Declined status -->
+                  <ng-container *ngIf="notification.status === 'DECLINED'">
+                    <span class="text-danger">Declined</span>
+                  </ng-container>
+                </div>
               </div>
             </a>
-            <!-- Accept and Decline Buttons -->
-            <div class="d-flex justify-content-between mt-2 px-2">
-              <button class="btn btn-success btn-sm" (click)="acceptRequest(notification.requestId)">Accept</button>
-              <button class="btn btn-danger btn-sm" (click)="declineRequest(notification.requestId)">Decline</button>
+          </li>
+
+
+        </ul>
+      </div>
+      <div class="dropdown px-3">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image" alt="" style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">
+        </a>
+        <ul class="dropdown-menu bg-white shadow">
+          <li>
+            <div class="dropdown-menu-profile-thumb d-flex">
+              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="">
+
+              <div class="d-flex flex-column">
+                <small>{{ lawyer?.firstName }}</small>
+                <a href="#">{{lawyer?.email}}</a>
+              </div>
             </div>
           </li>
+
+          <li>
+            <a class="dropdown-item" [routerLink]="['/lawyer', lawyerId]">
+              <i class="bi-person me-2"></i>
+              Profile
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="setting.html">
+              <i class="bi-gear me-2"></i>
+              Settings
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="help-center.html">
+              <i class="bi-question-circle me-2"></i>
+              Help
+            </a>
+          </li>
+
+          <li class="border-top mt-3 pt-2 mx-4">
+            <a class="dropdown-item ms-0 me-0" (click)="onLogout()">
+              <i class="bi-box-arrow-left me-2"></i>
+              Logout
+            </a>
+          </li>
+
         </ul>
       </div>
 
-
-
-
-
-      <!-- Profile Dropdown -->
-      <div class="relative" (click)="toggleDropdown()">
-        <div class="cursor-pointer">
-          <img alt="Profile" class=" rounded-full border-2 border-success shrink-0" style="width: 70px;  /* Adjust to your desired size */
-  height: 70px; /* Adjust to your desired size */"
-               [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'">
-        </div>
-
-        <!-- Dropdown Menu -->
-        <div *ngIf="isDropdownOpen" class="absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md z-10">
-          <div class="px-4 py-3">
-            <p class="text-sm font-semibold">{{lawyer?.firstName}} {{lawyer?.familyName}}</p>
-            <p class="text-xs text-gray-600">{{lawyer?.email}}</p>
-          </div>
-          <div class="border-t border-gray-200"></div>
-          <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a>
-          <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Settings</a>
-          <a (click)="onLogout()" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Logout</a>
-        </div>
-      </div>
     </div>
-    <!-- End of Topbar -->
   </div>
-  <!-- End of Container -->
 </header>
 
 <div class="sidebar px-4 py-4 py-md-5 me-0">
@@ -176,7 +193,7 @@
         <div class="card-header" style="background-color:#4c3575; color:white">Profile Picture</div>
         <div class="card-body text-center">
           <!-- Profile picture image-->
-          <img class="img-account-profile rounded-circle mb-2" [src]="imageUrl" alt="Profile Picture">
+          <img class="img-account-profile rounded-circle mb-2" style="height:300px;width: 300px;" [src]="imageUrl" alt="Profile Picture">
           <!-- Profile picture help block-->
           <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
           <!-- Profile picture upload button-->
