--- a/src/app/Components/Lawyer/consultations/css/tooplate-waso-strategy.css
+++ b/src/app/Components/Lawyer/consultations/css/tooplate-waso-strategy.css
@@ -10,7 +10,7 @@ Free Bootstrap 5 HTML Template
 
 
 /*---------------------------------------
-  CUSTOM PROPERTIES ( VARIABLES )             
+  CUSTOM PROPERTIES ( VARIABLES )
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
@@ -38,13 +38,13 @@ Free Bootstrap 5 HTML Template
 }
 
 body {
-    background: var(--white-color);
-    font-family: var(--body-font-family); 
+    background: #ececec;
+    font-family: var(--body-font-family);
 }
 
 
 /*---------------------------------------
-  TYPOGRAPHY               
+  TYPOGRAPHY
 -----------------------------------------*/
 
 h2,
@@ -106,7 +106,7 @@ ul li {
   font-weight: var(--font-weight-normal);
 }
 
-a, 
+a,
 button {
   touch-action: manipulation;
   transition: all 0.3s;
@@ -156,7 +156,7 @@ strong {
 
 
 /*---------------------------------------
-  CUSTOM ICON               
+  CUSTOM ICON
 -----------------------------------------*/
 .custom-icon {
   display: inline-block;
@@ -216,7 +216,7 @@ strong {
 
 
 /*---------------------------------------
-  CUSTOM BUTTON               
+  CUSTOM BUTTON
 -----------------------------------------*/
 .custom-btn {
   background: var(--secondary-color);
@@ -243,7 +243,7 @@ strong {
 
 
 /*---------------------------------------
-  NAVIGATION              
+  NAVIGATION
 -----------------------------------------*/
 .navbar {
   z-index: 9;
@@ -271,7 +271,7 @@ strong {
   padding-bottom: 15px;
 }
 
-.navbar-nav .nav-link.active, 
+.navbar-nav .nav-link.active,
 .navbar-nav .nav-link:hover,
 .projects-detail-page .navbar-nav .nav-link.active:hover {
   color: var(--secondary-color);
@@ -353,7 +353,7 @@ strong {
 
 
 /*---------------------------------------
-  SITE HEADER              
+  SITE HEADER
 -----------------------------------------*/
 .site-header {
   background: var(--primary-color);
@@ -371,7 +371,7 @@ strong {
 
 
 /*---------------------------------------
-  HERO              
+  HERO
 -----------------------------------------*/
 .hero {
   position: relative;
@@ -458,7 +458,7 @@ strong {
   object-fit: cover;
 }
 
-.carousel-control-next, 
+.carousel-control-next,
 .carousel-control-prev {
   top: auto;
   bottom: 50px;
@@ -470,7 +470,7 @@ strong {
   right: 70px;
 }
 
-.carousel-control-next-icon, 
+.carousel-control-next-icon,
 .carousel-control-prev-icon {
   width: 70px;
   height: 70px;
@@ -478,7 +478,7 @@ strong {
 
 
 /*---------------------------------------
-  ABOUT              
+  ABOUT
 -----------------------------------------*/
 .about-image-wrap {
   border-radius: 20px;
@@ -511,7 +511,7 @@ strong {
 
 
 /*---------------------------------------
-  SERVICES              
+  SERVICES
 -----------------------------------------*/
 .services {
   background: var(--section-bg-color);
@@ -539,9 +539,9 @@ strong {
   transition: all 0.3s ease-in-out;
 }
 
-.nav-tabs .nav-item.show .nav-link, 
+.nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active,
-.nav-tabs .nav-link:focus, 
+.nav-tabs .nav-link:focus,
 .nav-tabs .nav-link:hover {
   border-left-color: var(--secondary-color);
   background: var(--white-color);
@@ -549,14 +549,14 @@ strong {
 }
 
 .nav-tabs .nav-link.active h3,
-.nav-tabs .nav-link:focus h3, 
+.nav-tabs .nav-link:focus h3,
 .nav-tabs .nav-link:hover h3 {
   color: var(--primary-color);
 }
 
 
 /*---------------------------------------
-  PROJECTS              
+  PROJECTS
 -----------------------------------------*/
 .projects-thumb {
   border-radius: 20px;
@@ -633,7 +633,7 @@ strong {
 
 
 /*---------------------------------------
-  CONTACT INFO               
+  CONTACT INFO
 -----------------------------------------*/
 .contact-thumb {
   position: relative;
@@ -657,7 +657,7 @@ strong {
 
 
 /*---------------------------------------
-  CONTACT              
+  CONTACT
 -----------------------------------------*/
 .contact-container-wrap {
   background-color: var(--primary-color);
@@ -671,7 +671,7 @@ strong {
 
 
 /*---------------------------------------
-  CUSTOM FORM               
+  CUSTOM FORM
 -----------------------------------------*/
 .custom-form .form-control {
   background: transparent;
@@ -709,7 +709,7 @@ strong {
 
 
 /*---------------------------------------
-  SITE FOOTER              
+  SITE FOOTER
 -----------------------------------------*/
 .site-footer {
   background: var(--primary-color);
@@ -724,7 +724,7 @@ strong {
 
 
 /*---------------------------------------
-  SOCIAL ICON               
+  SOCIAL ICON
 -----------------------------------------*/
 .social-icon {
   margin: 0;
@@ -757,7 +757,7 @@ strong {
 
 
 /*---------------------------------------
-  RESPONSIVE STYLES               
+  RESPONSIVE STYLES
 -----------------------------------------*/
 @media screen and (min-width: 1600px) {
   .projects-thumb-large {
@@ -883,7 +883,7 @@ strong {
     font-size: 14px;
   }
 
-  .carousel-control-next, 
+  .carousel-control-next,
   .carousel-control-prev {
     bottom: 20px;
   }
