--- a/src/app/Components/Client/client-view/client-view.component.html
+++ b/src/app/Components/Client/client-view/client-view.component.html
@@ -59,38 +59,61 @@
         <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink">
           <small>Notifications</small>
 
-          <li *ngFor="let notification of notifications" class="notifications-block border-bottom pb-2 mb-2">
-            <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
-              <div class="notifications-icon-wrap bg-warning">
-                <i class="notifications-icon bi-envelope-fill"></i>
-              </div>
-
-              <div class="ms-2">
-                <span class="fw-bold">{{ notification.title }}</span>
-                <div class="text-muted">
-                  {{ notification.client.firstName }} {{ notification.client.familyName }}
-                  <br>
-                  {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}
+          <ng-container *ngFor="let notification of notifications">
+            <!-- Follow Request notifications -->
+            <li *ngIf="notification.title === 'Follow Request'" class="notifications-block border-bottom pb-2 mb-2">
+              <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
+                <div class="notifications-icon-wrap bg-warning">
+                  <i class="notifications-icon bi-person-plus"></i>
                 </div>
-                <div class="mt-2">
-                  <!-- Show Accept and Decline buttons only if the request is PENDING -->
-                  <ng-container *ngIf="notification.status === 'PENDING'">
+                <div class="ms-2">
+                  <span class="fw-bold">{{ notification.title }}</span>
+                  <div class="text-muted">
+                    {{ notification.lawyer.firstName }} {{ notification.lawyer.familyName }}
+                    <br>
+                    {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}
+                  </div>
 
-                  </ng-container>
+                  <div *ngIf="notification.status === 'PENDING'" class="mt-2">
+                    <!-- Accept and Decline buttons -->
+                    <button (click)="acceptRequest(notification)" class="btn btn-success btn-sm">Accept</button>
+                  </div>
 
-                  <!-- Show Accepted or Rejected status -->
-                  <ng-container *ngIf="notification.status === 'ACCEPTED'">
-                    <span class="text-success">Accepted</span>
-                  </ng-container>
+                  <!-- Show Accepted status -->
+                  <div *ngIf="notification.status === 'ACCEPTED'" class="mt-2">
+                    <span class="text-success">Request Accepted</span>
+                  </div>
 
                   <!-- Show Declined status -->
-                  <ng-container *ngIf="notification.status === 'DECLINED'">
-                    <span class="text-danger">Declined</span>
-                  </ng-container>
+                  <div *ngIf="notification.status === 'DECLINED'" class="mt-2">
+                    <span class="text-danger">Request Declined</span>
+                  </div>
                 </div>
-              </div>
-            </a>
-          </li>
+              </a>
+            </li>
+
+            <!-- Consultation notifications (only Accepted) -->
+            <li *ngIf="notification.title === 'Consultation' && notification.status === 'ACCEPTED'" class="notifications-block border-bottom pb-2 mb-2">
+              <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
+                <div class="notifications-icon-wrap bg-success">
+                  <i class="notifications-icon bi-calendar-check"></i>
+                </div>
+                <div class="ms-2">
+                  <span class="fw-bold">{{ notification.title }}</span>
+                  <div class="text-muted">
+                    {{ notification.lawyer.firstName }} {{ notification.lawyer.familyName }}
+                    <br>
+                    {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}
+                  </div>
+                  <div class="mt-2">
+                    <ng-container *ngIf="notification.status === 'ACCEPTED'">
+                      <span class="text-success">Accepted</span>
+                    </ng-container>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ng-container>
 
 
           <li class="notifications-block border-bottom pb-2 mb-2">
