--- a/src/app/Components/Lawyer/lawyer-view/lawyer-view.component.html
+++ b/src/app/Components/Lawyer/lawyer-view/lawyer-view.component.html
@@ -59,10 +59,10 @@
         <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink">
           <small>Notifications</small>
 
-          <li *ngFor="let notification of notifications" class="notifications-block border-bottom pb-2 mb-2">
+          <li *ngFor="let notification of notifications | slice:0:4" class="notifications-block border-bottom pb-2 mb-2">
             <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
-              <div class="notifications-icon-wrap bg-warning">
-                <i class="notifications-icon bi-envelope-fill"></i>
+              <div class="notifications-icon-wrap" [ngClass]="notification.title === 'Reminder' ? 'bg-info' : 'bg-warning'">
+                <i class="notifications-icon" [ngClass]="notification.title === 'Reminder' ? 'bi-alarm-fill' : 'bi-envelope-fill'"></i>
               </div>
 
               <div class="ms-2">
@@ -72,6 +72,7 @@
                   <br>
                   {{ notification.start | date: 'fullDate' }} - {{ notification.start | date: 'shortTime' }}
                 </div>
+
                 <div class="mt-2">
                   <!-- Show Accept and Decline buttons only if the request is PENDING -->
                   <ng-container *ngIf="notification.status === 'PENDING'">
@@ -93,20 +94,25 @@
             </a>
           </li>
 
-
-          <li class="notifications-block border-bottom pb-2 mb-2">
+          <li *ngFor="let hearing of reminder" class="notifications-block border-bottom pb-2 mb-2">
             <a class="dropdown-item d-flex align-items-center" href="#">
               <div class="notifications-icon-wrap bg-info">
                 <i class="notifications-icon bi-folder"></i>
               </div>
 
-              <div>
-                <span>Please check. We have sent a Daily report.</span>
-
-                <p>10 days ago</p>
+              <div class="ms-2">
+                <span>Upcoming hearing: {{ hearing.title }}</span>
+                <p>{{ hearing.start | date:'short' }}</p>
               </div>
             </a>
           </li>
+
+          <!-- Load More Button -->
+          <div class="text-center mt-3">
+            <button class="btn btn-primary" (click)="loadMoreNotifications()">Load More</button>
+          </div>
+
+
 
           <li class="notifications-block">
             <a class="dropdown-item d-flex align-items-center" href="#">
